--- a/app/views/tides/_header.html.erb
+++ b/app/views/tides/_header.html.erb
@@ -1,6 +1,5 @@
 <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
   <div class="container-fluid">
-    <%# <a class="navbar-brand" href="#">TideGEMS</a> %>
     <%= link_to 'TideGEMS', root_path, class: 'navbar-brand'%>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -8,9 +7,12 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="#">Weekly View</a>
+          <%= link_to 'Weekly Tide', '/tides/weekly_view', class: 'nav-link'%>
         </li>
-        <li class="nav-item dropdown">
+        <li class="nav-item">
+          <%= link_to 'Tide Stations', '/tide_stations', class: 'nav-link'%>
+        </li>
+        <%# <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Tide Station
           </a>
@@ -20,7 +22,7 @@
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
-        </li>
+        </li> %>
       </ul>
     </div>
   </div>
