--- a/app/views/tides/index.html.erb
+++ b/app/views/tides/index.html.erb
@@ -4,5 +4,5 @@
     <%= label_tag 'selected_date', 'Tide for:'%>
     <%= select_tag "date", options_for_select(@daily_data_date, @selected_date), onchange: "this.form.submit();"%>
   <% end %>
-  <%= line_chart @tide_sun_arr, library: {legend: 'bottom'} %>
+  <%= line_chart @tide_sun_arr, library: {legend: 'bottom', colors: ["#3366cc", "#ffc107", "purple"]} %>
 </div>
